change compoer name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "ofcold/nova-sortable",
-    "description": "A Laravel Nova tool.",
+    "name": "curiouseric/nova-sortable",
+    "description": "",
     "keywords": [
         "laravel",
         "nova"
